--- a/vk.user.css
+++ b/vk.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
-@name				!TEST
-@namespace			https://github.com/Suvorov-m/styles
-@version			1.0
-@description		!TEST
+@name				VK Dark Theme
+@namespace			https://github.com/Suvorov-m/vk-dark-theme
+@version			2.0.0
+@description		Customisable dark theme for vk.com
 @author				Suvorov Mikhail
 @homepageURL		https://vk.com/vk.darktheme
 @preprocessor		stylus
