Add style to basic elements

--- a/vk.user.css
+++ b/vk.user.css
@@ -179,6 +179,14 @@ brb(border_b = _c_border){
 			СТИЛИ ВНЕ ПАЛИТРЫ
 =========================================*/
 
+body {
+	bg(_c_bg)
+	color: _c_text_main
+}
+hr {
+	br(_c_border)
+}
+
 // ---------- Индикатор онлайн статуса у аватарки ----------
 
 [dir] .online.mobile::after,
